--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,10 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.google.code.gson:gson:2.8.2'
+
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.9.3'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.9.3'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.3'
+
+
 }
